# pyshotgrid

./: .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: Docs.yml  Documentation.yml  Release.yml  Tests.yml  documentation.yml
docs/: Makefile  api_reference.md  api_reference.rst  authentication.md  base.rst  conf.py  contributing.md  contributing.rst  default_entities_overview.md  default_entities_overview.rst  how_it_works.md  how_it_works.rst  how_to_add_custom_entities.md  how_to_add_custom_entities.rst  index.md  index.rst  installation.md  installation.rst  make.bat  modules.rst  pyshotgrid_vs_shotgun_api3.md  pyshotgrid_vs_shotgun_api3.rst  sg_default_entities.rst  sg_entity.rst  sg_site.rst  usage.rst  use_with_sgtk.rst  user_guide.md  user_guide.rst
docs/modules/: core.md  core.rst  field.rst  sg_default_entities.md  sg_default_entities.rst
icons/: pysg_logo.psd
src/: pyshotgrid.py
src/pysg/: base.py
src/pyshotgrid/: __init__.py  base.py  core.py  experimental.py  field.py  sg_base_entity.py  sg_default_entities.py  sg_entities.py  sg_entity.py  sg_site.py
tests/: __init__.py  conftest.py  test_core.py  test_pysg.py  test_pyshotgrid.py  test_sg_default_entities.py  test_sg_entity.py  test_sg_site.py  testbase.py
tests/resources/mockgun_schemas/: entity_schema.db  schema.db
tests/resources/mockgun_schemas/py2/: entity_schema.db  schema.db
tests/test_core/: test_core_functions.py  test_field.py  test_fieldschema.py  test_import.py  test_sg_entity.py  test_sg_site.py
tests/test_sg_default_entities/: test_sg_asset.py  test_sg_human_user.py  test_sg_playlist.py  test_sg_project.py  test_sg_published_file.py  test_sg_shot.py  test_sg_task.py  test_sg_version.py
