[metadata]
name = pyshotgrid
version = attr: pyshotgrid.VERSION
url = https://github.com/fabiangeisler/pyshotgrid
description = OOP for Autodesk ShotGrid
long_description = file: README.rst,LICENSE
keywords = shotgrid
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
author = Fabian Geisler
author_email = info@fasbue.com

[options]
python_requires = >=2.7
py_modules =
    pyshotgrid
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    shotgun-api3 @ git+git://github.com/shotgunsoftware/python-api.git@v3.3.1

[options.packages.find]
where=src

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:src/pyshotgrid/__init__.py]
search = VERSION = '{current_version}'
replace = VERSION = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
